# nn_analyzer

./: README.md  main.py  pyproject.toml
src/nn_analyzer/: __init__.py
src/nn_analyzer/core/: __init__.py  analyzer.py  diagram_generator.py  layers.py
src/nn_analyzer/web/: app.py
static/: manifest.json
static/css/: style.css
static/js/: app.js
templates/: index.html
