[project]
name = "nn-analyzer"
version = "0.1.0"
description = "Neural Network Architecture Analyzer - A tool for analyzing CNN architectures with receptive field calculation and visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[project.scripts]
nn-analyzer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nn_analyzer"]
